--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-select-component": "^4.3.4",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
