--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ REACT_APP_CLIENT_ID = 9c2fb2eb-34c8-45a9-9899-252097de50c2
 REACT_APP_TENANT_ID = https://login.microsoftonline.com/ff00942c-81e2-4530-b90f-4e7d35c20644
 REACT_APP_REDIRECT_URI = http://localhost:3000/
 
-API_BASE_URL =  https://localhost:7294/api/
+REACT_APP_API_BASE_URL =  https://localhost:7294/api/
+# REACT_APP_API_BASE_URL = https://feature1-webappbackend.azurewebsites.net/api/
